// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-media-type-folders edge cases should handle boundary pagination values 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "nextCursor": undefined,
    "total": 1,
  },
}
`;

exports[`get-media-type-folders edge cases should handle empty results when cursor exceeds available items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "nextCursor": undefined,
    "total": 1,
  },
}
`;

exports[`get-media-type-folders edge cases should handle pagination with small page size 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "flags": [],
        "icon": "icon-folder",
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Folder",
      },
    ],
    "nextCursor": undefined,
    "total": 1,
  },
}
`;

exports[`get-media-type-folders successful retrieval should get media type folders with custom pagination parameters 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "flags": [],
        "icon": "icon-folder",
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Folder",
      },
    ],
    "nextCursor": undefined,
    "total": 1,
  },
}
`;

exports[`get-media-type-folders successful retrieval should get media type folders with default pagination 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "flags": [],
        "icon": "icon-folder",
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Folder",
      },
    ],
    "nextCursor": undefined,
    "total": 1,
  },
}
`;

exports[`get-media-type-folders successful retrieval should handle large pagination values 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "flags": [],
        "icon": "icon-folder",
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Folder",
      },
    ],
    "nextCursor": undefined,
    "total": 1,
  },
}
`;
